update to fix paragraph quick tags and make the quicktag block always visible

--- a/app/assets/stylesheets/administration_structure.css.scss
+++ b/app/assets/stylesheets/administration_structure.css.scss
@@ -134,7 +134,7 @@ tr .action {
 
 
 #quicktags {
-  display: none;
+  display: block;
   padding-top: 10px;
 }
 
